tests/Checker/everything/errors/26a.vc
void f(int a, float b) { return; }

int main() {
    f();
    return 1;
}
